# tvdb_api_client

./: .editorconfig  .flake8  .gitignore  .path  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CLASSIFIERS.txt  CODE_OF_CONDUCT.md  FUNDING.yml  KEYWORDS.txt  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  changelog.md  cookbook.toml  cookbook.yaml  cookbook.yml  license.txt  make.toml  makefile  mkdocs.yml  mypy.ini  pyproject.toml  readme.md  requirements.txt  requirements_install.txt  requirements_test.txt  setup.py
.github/: funding.yml
.github/workflows/: build.yml  lint.yml  tests.yml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.md  README.md  installation.md  usage.md
docs/rtd/: .readthedocs.yaml  requirements.txt
docs/source/: .readthedocs.yaml  conf.py  index.rst  installation.rst  usage.rst
src/tvdb_api_client/: __init__.py  __version__.py  _secrets.py  client.py  constants.py  dataclasses.py  models.py  utils.py
src/tvdb_api_client/lib/: type_defs.py
tests/: conftest.py  test_client.py
tests/tvdb_api_client/: test_client.py  test_models.py  test_utils.py  test_version.py
tvdb_api_client/: __init__.py  _secrets.py  client.py
