[build-system]
requires = [
    "phosphorus>=0.8",
]
build-backend = "phosphorus.construction.api"

[project]
name = "tvdb_api_client"
version = "0.6.0"

authors = [
    { name = "Stephanos Kuma", email = "stephanos@kuma.ai" },
]
license = { text = "BSD-3-Clause" }

readme = "docs/README.md"
description = "A python client for TVDB rest API"
keywords = [
    "tvdb",
    "imdb",
    "tv series",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
]

requires-python = ">=3.9"
dependencies = [
    "pathurl~=0.7",
    "requests~=2.0",
]


[project.urls]
homepage = "https://tvdb-api-client.readthedocs.io/en/stable/"
repository = "https://github.com/spapanik/tvdb_api_client"
documentation = "https://tvdb-api-client.readthedocs.io/en/stable/"

[tool.phosphorus.dev-dependencies]
dev = [
    "ipdb~=0.13",
    "ipython~=8.18",
]
lint = [
    "black~=24.10",
    "mypy~=1.13",
    "ruff~=0.8",
    "types-requests~=2.0",
]
test = [
    "pytest~=8.3",
    "pytest-cov~=6.0",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-material-extensions~=1.3",
    "pygments~=2.18",
    "pymdown-extensions~=10.12",
]

[tool.black]
target-version = [
    "py39",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
src = [
    "src",
]
target-version = "py39"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "COM812",
    "E501",
    "FIX002",
    "PLR09",
    "TD002",
    "TD003",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PLR2004",
    "PT011",
    "S101",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = [
    "tests",
]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = "tests"

[tool.coverage.run]
branch = true
source = [
    "src/",
]
data_file = ".cov_cache/coverage.dat"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]
fail_under = 50
precision = 2
show_missing = true
skip_covered = true
skip_empty = true
